<?xml version="1.0" encoding="utf-8"?>
<resources> 
    <string name="app_name">Guloop</string>
    <string name="welcome">Hi , Shangrila!</string>
    <string name="btn1">Recommend</string>
    <string name="btn2">Dishes</string>
    <string name="btn3">My Orders</string>
    <string name="btn4">Discount</string>
    <string name="btn5">首页</string>
    <string name="admin">后台</string>
    <string name="orderset">System Settings</string>
    <string name="call">呼叫</string>
    <string name="printer">打印机/收银机</string>
     <string name="maintitle">菜品列表</string>
    <string name="recommendtitle">推荐菜式</string>
    <string name="preferentialtitle">优惠菜式</string>
    <string name="foodtypetitle">分类菜式</string>
    <string name="menu_dishImage">DishImage</string>
    <string name="menu_dishName">DishName</string>
    <string name="menu_unit">Unit</string>
    <string name="menu_price">Unit Price</string>
    <string name="menuNum">Quantity</string>
    <string name="menu_state">Status</string>
    <string name="menu_operator">Operate</string>
    <string name="menu_table_number">台号：</string>
    <string name="menu_unit_table">号</string>
    <string name="menu_order_number">单号：</string>
    <string name="menu_sum_no">Total number：</string>
    <string name="menu_sum_price">Total prices：</string>
    <string name="menu_sum_promotion">Favorable：</string>
    <string name="menu_sum_real_price">Actual cash desk amount：</string>
    <string name="menu_clear">清空</string>
    <string name="menu_order">预定</string>
    <string name="menu_send">发送</string>
    <string name="plate">盘</string>
    <string name="login_user">用户:</string>
    <string name="login_pwd">密码:</string>
    <string name="login_login">登录</string>
    <string name="login_cancle">取消</string>
    <string name="table">开台</string>
    <string name="carte">点菜</string>
    <string name="help_call">呼叫</string>
    <string name="check_list">查单</string>
    <string name="client">工作端</string>
    <string name="setting">设置</string>
    <string name="introduce_home">首页</string>
    <string name="introduce_menu">点餐</string>
    <string name="notice_title">提示</string>
    <string name="notice_content1">确定注销</string>
    <string name="notice_content2">用户吗？</string>
    <string name="m_setting_ok">确定</string>
    <string name="m_setting_cancle">取消</string>
    <string name="mtable_no">Table No. :  </string>
    <string name="mtable_order">订单编号：</string>
    <string name="mtable_customer">Number of people :  </string>
    <string name="mtable_pdaid">Employee ID :   </string>
    <string name="ok">确认</string>
    <string name="detail_no">编号：</string>
    <string name="detail_name">菜名:</string>
    <string name="detail_number">数量:</string>
    <string name="detail_teast">口味:</string>
    <string name="detail_memo">备注:</string>
    <string name="m_client_id">终端ID</string>
    <string name="m_client_state">状态</string>
    <string name="m_call_tableno">台号</string>
    <string name="Free">空闲</string>
    <string name="check_listbtn">CheckOrder</string>
    <string name="m_call_no">编号</string>
    <string name="m_call_time">时间</string>
    <string name="m_call_content">指令</string>
    <string name="m_check_list_order_no">订单号</string>
    <string name="m_check_list_time">开台时间</string>
    <string name="m_check_list_sumprice">总价</string>
    <string name="detail_btn">详情</string>
    <string name="hole_on">稍等</string>
    <string name="right_off">马上</string>
    <string name="edit">编辑</string>
    <string name="tablebtn">Change table</string>
    <string name="cartebtn">点菜</string>
    <string name="m_menu_order">下单</string>
    <string name="ip_local">Machine IP</string>
    <string name="other">Other Settings</string>
    <string name="localip">IP:</string>
    <string name="serverip">Server IP</string>
    <string name="serverupdata">更新数据</string>
    <string name="servertest">网络测试</string>
    <string name="serversave">保存设置</string>
    <string name="dateclear">清空数据</string>
    <string name="dbclear">重建数据</string>
    <string name="padname">Serial number:</string>
    
    
    <string name="pdr">Personal Daily Report</string>
    <string name="sr">Shift Report</string>
    <string name="drops">Drops</string>
    <string name="payout">Payout</string>
    <string name="purchase">Purchase</string>
    <string name="cs">Close Shift</string>
    
     <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="discount">1.00</string>
    
    
     <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>
