<?xml version="1.0" encoding="UTF-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
     >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_paired_devices"
        android:textColor="#fff"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="200dp"
        android:layout_height="wrap_content" 
        android:stackFromBottom="false" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        android:visibility="gone" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="200dp"
        android:layout_height="wrap_content" 
        android:stackFromBottom="false" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_scan" />

</LinearLayout>