<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5.0dip"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" >

        <TextView
            android:id="@id/foodBigCategoryname"
            style="@style/contentTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menu_dishName" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.1" >

        <TextView
            android:id="@id/foodBigCategoryname"
            style="@style/contentTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menu_price" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" >

        <TextView
            style="@style/contentTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menuNum" />
    </RelativeLayout>

</LinearLayout>