<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:keepScreenOn="true" >

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:orientation="horizontal"
        android:gravity="left"
         >

        <TextView
            android:id="@id/menu_table_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_bg"
            android:textSize="20.0sp"             
            android:gravity="center"
            android:text="Select Tables"
            android:background="@drawable/recomment"/>       
    </LinearLayout>

    <include layout="@layout/mmyorders_top_field" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/menu_split" />

    <ListView
        android:id="@id/menu_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/menu_split"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="20.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20.0dip"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_sum_no"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:id="@id/menu_sum_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:text="@string/menu_sum_price"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:id="@id/menu_sum_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:text="@string/menu_sum_promotion"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:id="@id/menu_sum_promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:text="@string/menu_sum_real_price"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <TextView
                android:id="@id/menu_sum_real_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="xxxx"
                android:textColor="@color/black"
                android:textSize="20.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="50.0dip"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@id/menu_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/choice_clear"
                android:textColor="@color/black"
                android:textSize="20.0sp" />

            <Button
                android:id="@id/menu_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/choice_send"
                android:textColor="@color/black"
                android:textSize="20.0sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>